--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
           cache: npm
 
       - name: "Install"
-        run: npm install
+        run: pnpm install
 
       - name: "Check tests"
         run: node --run test
@@ -31,7 +31,7 @@ jobs:
                 cache: npm
       
             - name: "Install"
-              run: npm install
+              run: pnpm install
       
             - name: "Check eslint"
               run: node --run lint
@@ -48,7 +48,7 @@ jobs:
                 cache: npm
       
             - name: "Install"
-              run: npm install
+              run: pnpm install
       
             - name: "Build"
               run: node --run build
