--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,54 +1,69 @@
 on: [push, pull_request]
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    name: Run tests
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '22.x'
-          cache: npm
-
-      - name: "Install"
-        run: pnpm install
-
-      - name: "Check tests"
-        run: node --run test
-  lint:
-          runs-on: ubuntu-latest
-          name: Run eslint
-          steps:
-            - uses: actions/checkout@v3
+    tests:
+        runs-on: ubuntu-latest
+        name: Run tests
+        steps:
+            - uses: actions/checkout@v4
               with:
-                fetch-depth: 1
-            - uses: actions/setup-node@v3
+                  fetch-depth: 1
+            - name: Install pnpm
+              uses: pnpm/action-setup@v4
               with:
-                node-version: '22.x'
-                cache: npm
-      
+                  version: 10
+            - name: Use Node.js 22
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "22.x"
+                  cache: "pnpm"
+
+            - name: "Install dependencies"
+              run: pnpm install
+
+            - name: "Check tests"
+              run: node --run test
+    lint:
+        runs-on: ubuntu-latest
+        name: Run eslint
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 1
+            - name: Install pnpm
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 10
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "22.x"
+                  cache: npm
+
             - name: "Install"
               run: pnpm install
-      
+
             - name: "Check eslint"
               run: node --run lint
-  build: 
-          runs-on: ubuntu-latest
-          name: Build
-          steps:
-            - uses: actions/checkout@v3
+    build:
+        runs-on: ubuntu-latest
+        name: Build
+        steps:
+            - uses: actions/checkout@v4
               with:
-                fetch-depth: 1
-            - uses: actions/setup-node@v3
+                  fetch-depth: 1
+
+            - name: Install pnpm
+              uses: pnpm/action-setup@v4
               with:
-                node-version: '22.x'
-                cache: npm
-      
+                  version: 10
+
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "22.x"
+                  cache: npm
+
             - name: "Install"
               run: pnpm install
-      
+
             - name: "Build"
               run: node --run build
