--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: "22.x"
-                  cache: npm
+                  cache: pnpm
 
             - name: "Install"
               run: pnpm install
@@ -60,7 +60,7 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: "22.x"
-                  cache: npm
+                  cache: pnpm
 
             - name: "Install"
               run: pnpm install
